<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <RelativeLayout
        android:id="@+id/gridlines"
...
            android:visibility="gone"
            app:srcCompat="@drawable/friday" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="308dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="145dp"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_filter" />

    <ImageView
        android:id="@+id/invert"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginTop="0dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_shortcut_invert"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/aqua"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginTop="60dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_shortcut_aqua"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/sepia"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginTop="60dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_shortcut_sepia"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/blackboard"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_shortcut_blackboard"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/posterize"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginTop="60dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_shortcut_posterize"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/solar"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_shortcut_solar"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/bw"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="-457dp"
        android:src="@drawable/ic_shortcut_bw"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/no_filter"
        android:layout_width="59dp"
        android:layout_height="97dp"
        android:layout_alignTop="@id/filter"
        android:layout_alignRight="@id/filter"
        android:layout_marginTop="0dp"
        android:layout_marginRight="230dp"
...
        android:layout_marginRight="193dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_cancel"

        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom"
        android:background="@color/pink">


        <ImageView
            android:id="@+id/toggle_camera"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_camera_front"/>

        <ImageView
            android:id="@+id/shutter"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:src="@drawable/ic_shutter"/>

        <ImageView
            android:id="@+id/toggle_flash"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_flash_off"/>

...
